--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-circuitbreaker-resilience4j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
