--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -100,7 +100,9 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include:
+          - health
+          - prometheus
   endpoint:
     health:
       show-components: ALWAYS
@@ -109,3 +111,6 @@ management:
       group:
         readiness:
           include: readinessState,redis
+  metrics:
+    tags:
+      application: ${spring.application.name}
